feat: iterate attribute template instead of ES attributes